--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -15,21 +15,49 @@
             style="@style/BlackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             android:text="@string/suggestion_text_1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/reduceSuggestionText"
             style="@style/BlackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toEndOf="@+id/suggestionText1"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/suggestionText"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text="@string/suggestion_text_2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText1" />
+
+        <ImageView
+            android:id="@+id/clippyImage2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/result_greeting"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/clippy" />
+
+        <TextView
+            android:id="@+id/increaseSuggestionText"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/suggestionText"
+            app:layout_constraintTop_toBottomOf="@+id/reduceSuggestionText" />
 
         <TextView
             android:id="@+id/suggestionText2"
@@ -47,40 +75,61 @@
             style="@style/BlackText"
             android:layout_width="334dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="28dp"
             android:text="@string/suggestion_text_3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText" />
+
+        <TextView
+            android:id="@+id/userEmissionSaving"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            app:layout_constraintStart_toEndOf="@+id/suggestionText3"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText" />
 
         <TextView
             android:id="@+id/userLegend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="0dp"
             android:text="@string/user_legend"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText1" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionChart"
+            style="@style/GreenText"/>
 
         <TextView
             android:id="@+id/averageLegend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="0dp"
             android:text="@string/average_legend"
+            app:layout_constraintEnd_toStartOf="@+id/dietLegend"
+            app:layout_constraintStart_toEndOf="@+id/userLegend"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionChart"
+            style="@style/YellowText"/>
+
+        <TextView
+            android:id="@+id/dietLegend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text="@string/suggestion_legend"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText1" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionChart"
+            style="@style/RedText"/>
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/suggestionChart"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginStart="8dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userLegend" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
 
         <TextView
             android:id="@+id/vancouverText"
@@ -88,32 +137,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/all_vancouver"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionChart" />
+            app:layout_constraintTop_toBottomOf="@+id/averageLegend" />
+
+        <TextView
+            android:id="@+id/vancouverText2"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/tree_offset"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />
 
         <TextView
             android:id="@+id/carbonHeading"
             style="@style/GreenHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="0dp"
             android:text="@string/carbon_save"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/carbonSaved"
             app:layout_constraintTop_toBottomOf="@+id/vancouverText" />
 
         <TextView
             android:id="@+id/carbonSaved"
-            style="@style/BlackText"
+            style="@style/GreenHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/carbonHeading"
+            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/vancouverText" />
 
         <TextView
@@ -121,28 +181,26 @@
             style="@style/GreenHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="0dp"
             android:text="@string/trees_save"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />
+            app:layout_constraintStart_toEndOf="@+id/treesSaved"
+            app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
 
         <TextView
             android:id="@+id/treesSaved"
-            style="@style/BlackText"
+            style="@style/GreenHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/treeHeading"
-            app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />
+            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
 
         <Button
             android:id="@+id/aboutButton"
             android:layout_width="250dp"
             android:layout_height="52dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:text="@string/about_button"
             app:layout_constraintEnd_toEndOf="parent"
