--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,12 +11,12 @@
         <item
             android:id="@+id/menu_user"
             android:icon="@drawable/ic_user"
-            android:title="User Name"/>
+            android:title="User profile"/>
 
         <item
             android:id="@+id/calculator"
             android:icon="@drawable/ic_mountain"
-            android:title="CO_2e calculator"/>
+            android:title="CO2e calculator"/>
 
         <item
             android:id="@+id/About"
