--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -14,12 +14,12 @@
             android:title="User profile"/>
 
         <item
-            android:id="@+id/calculator"
+            android:id="@+id/menu_calculator"
             android:icon="@drawable/ic_mountain"
             android:title="CO2e calculator"/>
 
         <item
-            android:id="@+id/About"
+            android:id="@+id/menu_about"
             android:icon="@drawable/ic_smiley"
             android:title="About CO_2e"/>
 
@@ -28,7 +28,7 @@
     <item android:title="">
         <menu>
             <item
-                android:id="@+id/LogOff"
+                android:id="@+id/menu_LogOff"
                 android:icon="@drawable/ic_exit"
                 android:title="Log off"/>
         </menu>
