--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -70,7 +70,7 @@
             android:contentDescription="@string/logo_content_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo_mcd" />
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/emissionChart"
