--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,12 +14,12 @@
     </style>
 
     <style name="GreenHeading" parent="@android:style/TextAppearance.Large">
-        <item name="android:textColor">#228B22</item>
+        <item name="android:textColor">@color/themeGreen</item>
         <item name="android:padding">8dp</item>
     </style>
 
     <style name="GreenHeadingSmall" parent="@android:style/TextAppearance.Small">
-        <item name="android:textColor">#228B22</item>
+        <item name="android:textColor">@color/themeGreen</item>
         <item name="android:padding">8dp</item>
     </style>
 
@@ -36,7 +36,7 @@
     </style>
 
     <style name="GreenText" parent="@android:style/TextAppearance.Small">
-        <item name="android:textColor">#006400</item>
+        <item name="android:textColor">@color/themeGreen</item>
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
     </style>
