--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,29 +10,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingTop="10dp"
-        android:background="#FFFFFF">
-        <TextView
-            android:paddingRight="20dp"
+        android:background="@drawable/background">
+        <ImageView
+            android:paddingRight="15dp"
             android:id="@+id/sign_up_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
             android:layout_gravity="right"
-            android:textSize="15dp"
-            android:text="@string/Sign_up_button"
-            android:textColor="@color/themeGreen"
-            android:background="#FFFFFF"/>
+            android:src="@drawable/signup" />
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/logo_community"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
-            android:background="@drawable/logo_mcd" />
+            android:background="@drawable/logo2" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_slogan"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textSize="16dp"
             android:gravity="center"/>
 
@@ -83,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remember_me"
+            android:textColor="#000000"
             android:layout_gravity="center"/>
 
         <TextView
@@ -96,16 +95,15 @@
             android:textColor="#0000ff" />
         </LinearLayout>
 
-    <TextView
+    <ImageView
         android:id="@+id/login_button"
         android:onClick="something"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="@string/login_button"
-        android:textColor="@color/themeGreen"
+        android:layout_marginBottom="5dp"
         android:textSize="20dp"
+        android:src="@drawable/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
