--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:background="@drawable/logo2" />
+            android:background="@drawable/logo" />
 
         <TextView
             android:layout_width="match_parent"
@@ -76,7 +76,6 @@
                 android:layout_gravity="center" />
         </LinearLayout>
 
-
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,7 +83,6 @@
             android:textStyle="bold"
             android:textColor="#000000"
             android:layout_gravity="center"/>
-
         <TextView
             android:id="@+id/forgot_password_button"
             android:onClick="something"
@@ -93,12 +91,24 @@
             android:text="@string/forgot_password"
             android:layout_gravity="center"
             android:textSize="10sp"
-            android:textColor="#0000ff" />
-        </LinearLayout>
+            android:textColor="#0000ff"
+            android:paddingBottom="10dp"/>
+    </LinearLayout>
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/google_sign_in_button"
+        android:layout_width="120dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/login_button"
+        >
+    </com.google.android.gms.common.SignInButton>
 
     <ImageView
         android:id="@+id/login_button"
-        android:onClick="something"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginEnd="20dp"
