--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -3,16 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="20dp"
     android:paddingTop="20dp"
-    android:background="@drawable/bg_light">
+    android:background="@drawable/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingRight="30dp">
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
@@ -55,9 +53,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp">
+        android:paddingTop="30dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
         <TextView
-            android:textSize="15dp"
+            android:textSize="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/participants_text"
@@ -65,7 +65,8 @@
         <TextView
             android:paddingLeft="10dp"
             android:textColor="#000000"
-            android:textSize="15dp"
+            android:textSize="20dp"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/participants_number"/>
@@ -75,9 +76,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp">
         <TextView
-            android:textSize="15dp"
+            android:textSize="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/total_pledged_text"
@@ -85,9 +88,10 @@
         <TextView
             android:paddingLeft="10dp"
             android:textColor="#000000"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/total_pledged_number"/>
     </LinearLayout>
 
@@ -96,7 +100,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="40dp">
         <TextView
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/trees_planted_text"
@@ -104,18 +108,20 @@
         <TextView
             android:paddingLeft="10dp"
             android:textColor="#000000"
-            android:textSize="15dp"
+            android:textSize="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/trees_planted_number"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="5dp">
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp">
         <TextView
-            android:textSize="15dp"
+            android:textSize="22dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/avg_pledged_text"
@@ -123,15 +129,27 @@
         <TextView
             android:paddingLeft="10dp"
             android:textColor="#000000"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/avg_pledged_number"/>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/about_button_community"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:src="@drawable/about" />
 
-
-
+    <TextView
+        android:layout_gravity="center"
+        android:paddingTop="10dp"
+        android:textSize="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/other_members"
+        android:textColor="@color/themeGreen"/>
 
 
 </LinearLayout>
