--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,11 +7,12 @@
     android:paddingTop="10dp"
     android:background="@drawable/background">
 
+
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo_mcd"/>
     <TextView
         android:paddingTop="10dp"
         android:layout_width="300dp"
