--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -63,13 +63,13 @@
             android:text="@string/participants_text"
             android:textColor="@color/themeGreen" />
         <TextView
+            android:id="@+id/number_of_participants"
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/participants_number"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
