--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="20dp"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:paddingLeft="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +55,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="30dp"
-        android:paddingLeft="5dp"
         android:paddingRight="5dp">
         <TextView
             android:textSize="22dp"
@@ -69,7 +69,8 @@
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="hi"/>
     </LinearLayout>
 
 
@@ -77,8 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:paddingRight="5dp"
-        android:paddingLeft="5dp">
+        android:paddingRight="5dp">
         <TextView
             android:textSize="22dp"
             android:layout_width="wrap_content"
@@ -135,12 +135,30 @@
             android:text="@string/avg_pledged_number"/>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/about_button_community"
-        android:layout_gravity="center"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:src="@drawable/about" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/pledge_button"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:src="@drawable/makepledge" />
+        <Space
+            android:layout_width="20dp"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/about_button_in_community_activity"
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:src="@drawable/about" />
+    </LinearLayout>
+
 
     <TextView
         android:layout_gravity="center"
