--- a/app/src/main/res/layout/activity_pledge.xml
+++ b/app/src/main/res/layout/activity_pledge.xml
@@ -1,10 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PledgeActivity">
+    android:orientation="vertical"
+    android:background="@drawable/background"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/logo"/>
+
+    <TextView
+        android:paddingTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/pledge"
+        android:layout_gravity="center"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="18dp" />
+
+    <RadioGroup
+        android:id="@+id/pledge_radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="10dp">
+
+        <RadioButton
+            android:id="@+id/pledge_high"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="@string/pledge_radio_button_high"
+            android:textColor="@color/themeGreen"
+            android:buttonTint="@color/themeGreen"/>
+
+        <RadioButton
+            android:id="@+id/pledge_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="@string/pledge_radio_button_medium"
+            android:textColor="@color/themeGreen"
+            android:buttonTint="@color/themeGreen"/>
+
+        <RadioButton
+            android:id="@+id/pledge_low"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="@string/pledge_radio_button_low"
+            android:textColor="@color/themeGreen"
+            android:buttonTint="@color/themeGreen"/>
+
+        <RadioButton
+            android:id="@+id/pledge_none"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="@string/pledge_radio_button_none"
+            android:textColor="@color/themeGreen"
+            android:buttonTint="@color/themeGreen" />
+    </RadioGroup>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/pledge"
+        android:layout_gravity="center"/>
+
+
 
 
 
