--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/menu_community"
+            android:icon="@drawable/ic_home"
+            android:title="Home"/>
+        <item
             android:id="@+id/menu_user"
             android:icon="@drawable/ic_user"
             android:title="User profile"/>
