--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -26,7 +26,12 @@
     </group>
 
     <item android:title="">
+
         <menu>
+            <item
+                android:id="@+id/menu_Login"
+                android:icon="@drawable/ic_login"
+                android:title="Log in/Switch user"/>
             <item
                 android:id="@+id/menu_LogOff"
                 android:icon="@drawable/ic_exit"
