--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -198,12 +198,12 @@
 
         <Button
             android:id="@+id/aboutButton"
-            android:layout_width="250dp"
-            android:layout_height="52dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/about_button"
+            android:background="@drawable/about"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/treeHeading" />
