--- a/app/src/main/res/layout/frag_about.xml
+++ b/app/src/main/res/layout/frag_about.xml
@@ -7,7 +7,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AboutActivity">
+        tools:context=".AboutActivity"
+        android:background="@drawable/background">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
