--- a/app/src/main/res/layout/frag_pledge.xml
+++ b/app/src/main/res/layout/frag_pledge.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/background"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="20dp"
+    android:background="@drawable/background">
 
     <ImageView
         android:layout_width="200dp"
@@ -77,5 +77,4 @@
         android:layout_height="wrap_content"
         android:src="@drawable/pledge"
         android:layout_gravity="center"/>
-
 </LinearLayout>
