Revert "Merge branch 'login_layout' into 'master'"
This reverts merge request !52

--- a/app/src/main/res/layout/activity_adding_food.xml
+++ b/app/src/main/res/layout/activity_adding_food.xml
@@ -624,7 +624,7 @@
             <ImageView
                 android:id="@+id/nextButton"
                 android:layout_width="100dp"
-                android:layout_height="70dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
