--- a/app/src/main/res/layout/frag_calculator.xml
+++ b/app/src/main/res/layout/frag_calculator.xml
@@ -605,10 +605,12 @@
 
             <ImageButton
                 android:id="@+id/nextButton"
-                android:layout_width="120dp"
+                android:layout_width="155dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center|bottom"
-                android:background="@drawable/addfood" />
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/check" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
