--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="20dp"
-    android:background="@drawable/background"
-    android:paddingLeft="10dp">
+    android:background="@drawable/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,7 +42,7 @@
                 android:layout_gravity="right"
                 android:paddingRight="80dp"/>
             <Spinner
-                android:id="@+id/city_filter_spinner_choice"
+                android:id="@+id/cityList"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:entries="@array/city_array"
@@ -55,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="30dp"
+        android:paddingLeft="5dp"
         android:paddingRight="5dp">
         <TextView
             android:textSize="22dp"
@@ -63,14 +63,13 @@
             android:text="@string/participants_text"
             android:textColor="@color/themeGreen" />
         <TextView
-            android:id="@+id/number_of_participants"
             android:paddingLeft="10dp"
             android:textColor="#000000"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hi"/>
+            android:text="@string/participants_number"/>
     </LinearLayout>
 
 
@@ -78,7 +77,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:paddingRight="5dp">
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp">
         <TextView
             android:textSize="22dp"
             android:layout_width="wrap_content"
@@ -135,30 +135,12 @@
             android:text="@string/avg_pledged_number"/>
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:id="@+id/pledge_button"
-            android:layout_gravity="center"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/makepledge" />
-        <Space
-            android:layout_width="20dp"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/about_button_in_community_activity"
-            android:layout_gravity="center"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/about" />
-    </LinearLayout>
-
+    <ImageView
+        android:id="@+id/about_button_community"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:src="@drawable/about" />
 
     <TextView
         android:layout_gravity="center"
