Update adding food fragment layout refactor fragment names

--- a/app/src/main/res/layout/activity_adding_food.xml
+++ b/app/src/main/res/layout/activity_adding_food.xml
@@ -622,7 +622,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/nextButton"
+                android:id="@+id/nextImageView"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
