--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/display_name_promt"
+            android:text="@string/display_name_prompt"
             android:layout_gravity="center"
             android:textSize="18dp"
             android:textColor="@color/themeGreen"/>
@@ -100,7 +100,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/city_promt"
+            android:text="@string/city_prompt"
             android:layout_gravity="center"
             android:textSize="18dp"
             android:textColor="@color/themeGreen"/>
@@ -149,7 +149,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/email_promt"
+            android:text="@string/email_prompt"
             android:layout_gravity="center"
             android:textSize="18dp"
             android:textColor="@color/themeGreen"/>
