--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
 
         <ImageView
             android:id="@+id/logoCommunity"
+            android:contentDescription="@string/logo_content_description"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
@@ -26,7 +27,7 @@
             android:gravity="center"
             android:text="@string/login_slogan"
             android:textColor="#000000"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -43,7 +44,7 @@
                 android:id="@+id/emailInput"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:hint="Email Address"
+                android:hint="@string/email_hint"
                 android:inputType="textEmailAddress"
                 android:gravity="center"
                 android:layout_gravity="center">
@@ -64,7 +65,7 @@
                 android:id="@+id/passwordInput"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:gravity="center"
                 android:layout_gravity="center" />
@@ -79,12 +80,11 @@
             android:layout_gravity="center"/>
         <TextView
             android:id="@+id/forgotPassword"
-            android:onClick="something"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
             android:layout_gravity="center"
-            android:textSize="10sp"
+            android:textSize="12sp"
             android:textColor="#0000ff"
             android:paddingBottom="10dp"/>
     </LinearLayout>
@@ -96,7 +96,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="5dp"
-        android:text="Login"
+        android:text="@string/login_button"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -108,8 +108,9 @@
         android:layout_height="40dp"
         android:layout_marginStart="48dp"
         android:layout_marginBottom="8dp"
-        android:text="Sign Up"
+        android:text="@string/sign_up_button"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
