finished share photo to facebook and add a hashtag, try to add the number of the suggestion on the hashtag

--- a/app/src/main/res/layout/fragment_pledge.xml
+++ b/app/src/main/res/layout/fragment_pledge.xml
@@ -192,4 +192,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
 
+    <ImageButton
+        android:id="@+id/facebookShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_share"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/treeHeading"
+        app:layout_constraintTop_toBottomOf="@+id/vancouverText2" />
+
 </android.support.constraint.ConstraintLayout>
