--- a/app/src/main/res/layout/fragment_facebook_share.xml
+++ b/app/src/main/res/layout/fragment_facebook_share.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FacebookShareFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    tools:context=".fragments.FacebookShareFragment"
+    android:background="#4a6ea9">
+    <ImageView
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/facebook_logo"/>
 
 </FrameLayout>
