--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:id="@+id/ProfilePicture"
+        android:id="@+id/profilePicture"
         android:src="@mipmap/ic_launcher_round"/>
 
     <LinearLayout
